@@ -190,7 +190,7 @@ the period.plm file generated by the FOCUS PELMO GUI.</p>
 #&gt; 
 #&gt; </div><div class='input'><span class='co'># We get exactly the same PECgw values (on Linux, calling PELMO using Wine).</span>
 <span class='fu'>print</span>(<span class='no'>time_1</span>)</div><div class='output co'>#&gt;        User      System verstrichen 
-#&gt;     218.896       1.000      55.247 </div><div class='input'>
+#&gt;     219.036       1.004      56.622 </div><div class='input'>
 <span class='co'># Demonstrate some results with metabolites.</span>
 <span class='no'>runs_2</span> <span class='kw'>&lt;-</span> <span class='fu'>list</span>(<span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D_1_May_every_other_year_mets'</span>,
                     <span class='kw'>win</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Kre"</span>)))
