@@ -92,7 +92,7 @@ Usually, an instance of this class will be generated by <code><a href='read.TOXS
     <dt><code>cwas</code></dt><dd><p>Dataframe holding the concentrations.</p></dd>
     <dt><code>events</code></dt><dd><p>List of dataframes holding the event statistics for each threshold.</p></dd>
     <dt><code>windows</code></dt><dd><p>Matrix of maximum time weighted average concentrations (TWAC_max)
-and areas under the curve in µg/day * h (AUC_max_h) or µg/day * d (AUC_max_d) 
+and areas under the curve in /day * h (AUC_max_h) or /day * d (AUC_max_d)
 for the requested moving window sizes in days.</p></dd>
 </dl>
     
@@ -101,8 +101,8 @@ for the requested moving window sizes in days.</p></dd>
     
     <dl class='dl-horizontal'>
   <dt><code>get_events(threshold, total = FALSE)</code></dt><dd><p>Populate a datataframe with event information for the specified threshold value
-        in µg/L. If <code>total = TRUE</code>, the total concentration including the amount
-        adsorbed to suspended matter will be used. The resulting dataframe is stored in the 
+        in /L. If <code>total = TRUE</code>, the total concentration including the amount
+        adsorbed to suspended matter will be used. The resulting dataframe is stored in the
         <code>events</code> field of the object.</p></dd>
   <dt><code>moving_windows(windows, total = FALSE)</code></dt><dd><p>Add to the <code>windows</code> field described above.
         Again, if <code>total = TRUE</code>, the total concentration including the amount
