@@ -102,9 +102,9 @@ from which the values were taken.</p><dl class='dl-horizontal'>
 #&gt; 20 m             80    95
 #&gt; 
 #&gt; $`2.0`
-#&gt;   dissolved bound
-#&gt; 1       0.0   0.0
-#&gt; 2      97.5  97.5
+#&gt;           dissolved bound
+#&gt; No buffer       0.0   0.0
+#&gt; 20 m           97.5  97.5
 #&gt; </div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="sidebar">
