@@ -101,7 +101,7 @@ out file (FOCUS TOXSWA 4, i.e. TOXSWA 4.4.2 or similar).</p></td>
     </tr>
     <tr>
       <th>segment</th>
-      <td><p>The segment for which the data should be read. Either "last", or 
+      <td><p>The segment for which the data should be read. Either "last", or
 the segment number.</p></td>
     </tr>
     <tr>
@@ -112,7 +112,7 @@ of interested can be selected by its code name.</p></td>
     </tr>
     <tr>
       <th>total</th>
-      <td><p>Set this to TRUE in order to read total concentrations as well. This is 
+      <td><p>Set this to TRUE in order to read total concentrations as well. This is
 only necessary for .out files as generated by TOXSWA 4.4.2 or similar, not for .cwa
 files. For .cwa files, the total concentration is always read as well.</p></td>
     </tr>
@@ -123,7 +123,7 @@ maximum time weighted average concentrations and areas under the curve.</p></td>
     </tr>
     <tr>
       <th>thresholds</th>
-      <td><p>Numeric vector of threshold concentrations in µg/L for
+      <td><p>Numeric vector of threshold concentrations in /L for
 generating event statistics.</p></td>
     </tr>
     </table>
